# fatest

./: LICENSE  fatest.cabal
app/: Main.hs
app/Text/: Lare.hs
