cabal-version:      2.4
name:               fatest
version:            0.1.0.0
maintainer:         rutger@viasalix.nl
author:             Rutger Broekhoff
license: BSD-2-Clause

executable fatest
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:    Text.Lare
    default-language: Haskell2010
    build-depends:
        base ^>=4.14.3.0,
        containers,
        mtl
